--- a/Numpy_exercises_BS_01.06.2023.ipynb
+++ b/Numpy_exercises_BS_01.06.2023.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "f1453005",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "61259116",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0be7e1fb",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "dbf898c9",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "id": "7f27b5d6",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "id": "a4480035",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "       44, 45, 46, 47, 48, 49])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "id": "276d3314",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "id": "c33a55d9",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "id": "2be26e74",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "id": "cf216dc4",
    "metadata": {},
    "outputs": [
@@ -291,17 +291,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.6963047  0.54824165 0.63003907]\n",
-      "  [0.86324683 0.47215946 0.49059768]\n",
-      "  [0.66496851 0.33345488 0.90019896]]\n",
+      "[[[0.00721788 0.68131742 0.90357793]\n",
+      "  [0.867749   0.1629375  0.35508401]\n",
+      "  [0.6827684  0.6298795  0.76747045]]\n",
       "\n",
-      " [[0.90973321 0.06237005 0.57632169]\n",
-      "  [0.49577828 0.55718443 0.73844922]\n",
-      "  [0.32822181 0.34502874 0.54088709]]\n",
+      " [[0.97494075 0.04714261 0.41228147]\n",
+      "  [0.01762262 0.00258482 0.798936  ]\n",
+      "  [0.10437343 0.41477461 0.8437231 ]]\n",
       "\n",
-      " [[0.19963284 0.01002041 0.14578662]\n",
-      "  [0.30840296 0.36019468 0.53854736]\n",
-      "  [0.04637129 0.38023246 0.02653604]]]\n"
+      " [[0.07823759 0.301944   0.78299777]\n",
+      "  [0.36108205 0.62144621 0.17210855]\n",
+      "  [0.90449009 0.39440416 0.6665882 ]]]\n"
      ]
     }
    ],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "id": "489656dd",
    "metadata": {},
    "outputs": [
@@ -331,38 +331,38 @@
      "output_type": "stream",
      "text": [
       "Original Array:\n",
-      "[[8.16209530e-01 6.15245072e-01 2.91219334e-01 8.83091027e-01\n",
-      "  1.82573280e-01 2.45784134e-02 6.53733617e-01 7.56302456e-01\n",
-      "  5.46180365e-01 5.52171121e-02]\n",
-      " [1.91924972e-01 3.24681944e-01 7.79017550e-01 9.52395387e-01\n",
-      "  2.98653333e-01 4.21988019e-01 7.78910023e-01 1.96179717e-01\n",
-      "  8.31066794e-01 2.47617345e-01]\n",
-      " [2.04933846e-01 8.46847757e-01 6.19360793e-01 6.55675261e-01\n",
-      "  2.27564411e-01 6.29364573e-02 4.66131245e-01 4.61813183e-01\n",
-      "  1.10294582e-01 1.54928493e-01]\n",
-      " [8.84083724e-01 5.76867183e-01 6.94217189e-01 7.68307201e-01\n",
-      "  2.93860373e-01 1.24332615e-01 3.05871302e-01 8.69742838e-01\n",
-      "  8.29189878e-01 4.75350909e-01]\n",
-      " [6.92225634e-01 1.96340772e-01 6.76719085e-01 8.54374115e-02\n",
-      "  7.23145041e-02 5.92776217e-01 2.52187930e-01 5.73986564e-01\n",
-      "  4.82802334e-02 6.48452204e-01]\n",
-      " [6.69124801e-01 7.15983463e-01 7.01431029e-01 6.18072540e-01\n",
-      "  6.61188867e-01 3.38935393e-01 5.58652748e-01 5.54502820e-01\n",
-      "  7.93188510e-02 5.41085649e-02]\n",
-      " [5.32766997e-01 3.33720632e-01 4.19383023e-01 5.05280463e-02\n",
-      "  2.74943245e-01 7.56983669e-01 2.68912720e-01 8.46992194e-01\n",
-      "  5.94946445e-04 5.65254118e-01]\n",
-      " [3.63126731e-01 8.45407293e-01 9.17282352e-01 1.91674952e-01\n",
-      "  8.28315538e-01 2.82149160e-01 8.54308646e-01 6.45827242e-01\n",
-      "  4.21451540e-01 6.10066611e-01]\n",
-      " [5.77498061e-02 7.02477791e-01 7.37792679e-01 9.29127094e-01\n",
-      "  3.16069094e-01 5.35464149e-01 7.61449312e-01 2.25792708e-01\n",
-      "  1.62945229e-01 6.87763882e-01]\n",
-      " [8.94561428e-01 8.13572731e-01 3.55358321e-01 7.44399591e-01\n",
-      "  4.38477953e-01 9.04117438e-01 4.54361640e-02 7.23329983e-01\n",
-      "  8.84138110e-02 5.51460090e-01]]\n",
+      "[[7.79997229e-01 7.21093063e-01 3.87445138e-01 4.46551747e-01\n",
+      "  3.64225039e-01 2.60493705e-01 1.38200219e-01 4.09184335e-02\n",
+      "  2.81944179e-02 8.15447330e-01]\n",
+      " [5.98684212e-01 7.32724112e-02 7.29912801e-01 7.90989867e-01\n",
+      "  9.81571722e-01 2.81965723e-01 6.18593537e-01 8.57345158e-01\n",
+      "  2.35108876e-01 4.24093381e-02]\n",
+      " [5.18557309e-01 2.93418398e-01 5.00604276e-01 3.35980051e-01\n",
+      "  5.26448638e-01 2.77742922e-01 4.83366020e-01 7.75311490e-01\n",
+      "  3.30667955e-01 1.02206430e-01]\n",
+      " [4.90867570e-01 1.05315654e-01 8.98978859e-01 9.60642074e-01\n",
+      "  2.10066513e-01 7.39726335e-01 9.36372648e-01 8.67298101e-01\n",
+      "  8.52884702e-01 4.79974075e-01]\n",
+      " [7.51259471e-01 6.18553439e-01 7.62010195e-01 8.01454328e-01\n",
+      "  4.89391874e-01 8.11151942e-01 8.26617151e-01 7.20009029e-01\n",
+      "  4.91442336e-04 7.04523925e-02]\n",
+      " [2.90303820e-02 1.52075638e-02 9.91944258e-01 3.65758214e-01\n",
+      "  2.07187440e-01 8.25207517e-01 7.14080864e-01 4.34124657e-01\n",
+      "  5.48798247e-01 5.46012552e-01]\n",
+      " [5.25942957e-01 6.48401190e-01 4.90982155e-01 1.83170108e-01\n",
+      "  2.91768052e-01 2.13882960e-01 9.24580669e-01 3.35734696e-01\n",
+      "  5.88055548e-01 4.82273893e-01]\n",
+      " [3.13670806e-01 4.08280526e-01 9.09573119e-01 9.82229474e-01\n",
+      "  7.53137363e-01 2.75970300e-01 1.29751861e-02 1.21584096e-01\n",
+      "  9.73770466e-01 2.24367435e-01]\n",
+      " [5.61293691e-01 8.36368101e-01 7.21183345e-01 5.22721124e-01\n",
+      "  3.41314253e-01 9.21105257e-01 9.19278024e-01 9.01219355e-01\n",
+      "  4.07241119e-01 8.38400557e-01]\n",
+      " [3.58687538e-01 5.70045559e-02 2.95293256e-01 6.30249139e-01\n",
+      "  1.24225830e-01 1.49756832e-01 2.46503861e-01 5.91115152e-01\n",
+      "  1.78316230e-01 7.27658764e-02]]\n",
       "Minimum and Maximum Values:\n",
-      "0.0005949464448224973 0.9523953869174158\n"
+      "0.0004914423362846199 0.991944258203603\n"
      ]
     }
    ],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "id": "ccf04204",
    "metadata": {},
    "outputs": [
@@ -395,11 +395,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.93620049 0.54276777 0.36621354 0.84823095 0.10477989 0.83251192\n",
-      " 0.73849311 0.63012393 0.07332753 0.74338683 0.02526438 0.81730786\n",
-      " 0.9510812  0.93649668 0.31419562 0.40633561 0.87777952 0.50293241\n",
-      " 0.72689506 0.97819955 0.80393338 0.09003219 0.09505138 0.48639698\n",
-      " 0.90240868 0.3822239  0.62769091 0.12579566 0.54281798 0.38520861]\n"
+      "[0.03647262 0.68796826 0.15492155 0.21892777 0.02080292 0.00508117\n",
+      " 0.00407253 0.43002343 0.00406489 0.76404946 0.95575418 0.43458203\n",
+      " 0.10673185 0.66264396 0.45958968 0.59962566 0.54922816 0.34417362\n",
+      " 0.88525648 0.68065174 0.59841387 0.52323768 0.50999001 0.31034397\n",
+      " 0.05330611 0.65108826 0.07437033 0.85295901 0.67319221 0.85722096]\n"
      ]
     }
    ],
@@ -410,17 +410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "id": "5c667911",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5598027843420118"
+       "0.4369581448696441"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "id": "92e91c55",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 19,
    "id": "96898e20",
    "metadata": {},
    "outputs": [
@@ -482,19 +482,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.98342712 0.85533341 0.27356972 0.80089971 0.57744462]\n",
-      " [0.73378635 0.76743841 0.         0.52644104 0.42883136]\n",
-      " [0.86096071 0.08024195 0.84129307 0.05907241 0.33422692]\n",
-      " [0.50744258 1.         0.61544688 0.46162287 0.49734414]\n",
-      " [0.96497547 0.45644905 0.07066212 0.36275465 0.97110868]]\n"
+      "[[0.71932967 0.05110252 0.6231208  0.93232125 0.15306023]\n",
+      " [0.33427919 0.17066713 0.35606137 0.67620166 0.35378604]\n",
+      " [0.58995943 0.78614156 0.91486631 0.63409104 0.18689092]\n",
+      " [0.0690027  0.96489739 0.66215221 0.56191105 0.04127868]\n",
+      " [0.         1.         0.52768691 0.89764304 0.86214299]]\n"
      ]
     }
    ],
    "source": [
     "Z = np.random.random((5,5))\n",
     "Zmax, Zmin = Z.max(), Z.min()\n",
-    "Z= (Z-Zmin)/(Zmax-Zmin)\n",
-    "print (Z)"
+    "Z = (Z-Zmin)/(Zmax-Zmin)\n",
+    "print(Z)"
    ]
   },
   {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "id": "b804061b",
    "metadata": {},
    "outputs": [
@@ -637,6 +637,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "647cc8dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.51400575 0.43532349 0.03845878 0.17770644 0.67824999 0.\n",
+      " 0.3297817  0.59139538 0.5225611  0.25120765]\n"
+     ]
+    }
+   ],
+   "source": [
+    "randomArrayTen2 = np.random.random((10))\n",
+    "randomArrayTen2[np.argmax(randomArrayTen2)]=0\n",
+    "print(randomArrayTen2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fb28fab4",
    "metadata": {},
@@ -648,39 +669,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 25,
    "id": "d0c7d1e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.06276938, -0.2741792 ,  0.19996199, -0.19283326, -0.01555784,\n",
-       "        -0.05793655, -0.00979953,  0.38793233,  0.03765188, -0.01247044],\n",
-       "       [-0.1577308 , -0.40429969, -0.29098881, -0.19833719,  0.56300684,\n",
-       "        -0.26291158,  0.07452665,  0.50529845,  0.52490774, -0.35347161],\n",
-       "       [-0.34181914, -0.26975763,  0.13109091, -0.19089166, -0.11024316,\n",
-       "         0.3727739 , -0.37802785,  0.45648356,  0.082347  ,  0.24804406],\n",
-       "       [-0.60748005,  0.26057295,  0.25948713, -0.41204919,  0.36403841,\n",
-       "         0.03138933,  0.03018146,  0.34200552, -0.15706932, -0.11107624],\n",
-       "       [-0.36599977, -0.47227074, -0.14826842, -0.04073174,  0.14626793,\n",
-       "        -0.01988788,  0.14761392,  0.40411455,  0.12221593,  0.22694622]])"
+       "array([], shape=(0, 10), dtype=float64)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = np.random.rand(5, 10)\n",
-    "\n",
-    "# Recent versions of numpy\n",
+    "X = np.random.rand(0, 10)\n",
     "Y = X - X.mean(axis=1, keepdims=True)\n",
-    "\n",
-    "# Older versions of numpy\n",
-    "Y = X - X.mean(axis=1).reshape(-1, 1)\n",
     "Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ba20696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randomThreeByThree = np.random.radiant(0,10,(3,3))\n",
+    "print(randomThreeByThree)\n",
+    "meansByRow = np.mean(random)"
    ]
   },
   {
@@ -691,6 +710,31 @@
     "**17. How to get the n largest values of an array**\n",
     "\n",
     "Z = np.arange(10000) np.random.shuffle(Z) n = 5 hint: np.argsort | np.argpartition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cb9cb5f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy.random' has no attribute 'radiant'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m LargeArray \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mradiant\u001b[49m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1000\u001b[39m,(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1000\u001b[39m))\n\u001b[1;32m      2\u001b[0m sortedLargeArray \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msort(LargeArray)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(sortedLargeArray[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m])\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy.random' has no attribute 'radiant'"
+     ]
+    }
+   ],
+   "source": [
+    "LargeArray = np.random.radiant(1,1000,(1,1000))\n",
+    "sortedLargeArray = np.sort(LargeArray)\n",
+    "print(sortedLargeArray[0,-5])\n",
+    "print(sortedLargeArray[0,-5:])"
    ]
   },
   {
@@ -756,7 +800,9 @@
    "id": "bd3aa7e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "threeByFiveArray = np.ramdon.radiant(1,10,(5,3))\n"
+   ]
   }
  ],
  "metadata": {
